change the name

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -53,7 +53,7 @@
                     <%} %>
                         <div class="card-footer">
                             2 days ago..
-                            <a href="/campgrounds/">All Campground</a>
+                            <a href="/campgrounds/">All Sightseeing</a>
                         </div>
             </div>
 
