--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
     <div class='row'>
-        <h1 class='text-center'>Edit Campground</h1>
+        <h1 class='text-center'>Edit Sightseeing</h1>
         <div class='col-6 offset-3'>
             <form action="/campgrounds/<%= campground._id%>?_method=PUT" method='POST' novalidate class='validated-form' enctype="multipart/form-data">
                 <div class='mb-3'>
@@ -22,7 +22,7 @@
                 -->
                 
                 <div class="mb-3">
-                    <label  class='form-label' for="price">Campground Price</label>
+                    <label  class='form-label' for="price">Sightseeing Price</label>
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" id='price' class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label" name='campground[price]' value='<%=campground.price%>' required>
@@ -49,10 +49,10 @@
                     <%}) %> 
                 </div>
                 <div class="mb-3">
-                    <button class='btn btn-success'>Update Campground</button>
+                    <button class='btn btn-success'>Update Sightseeing</button>
                 </div>
                 
             </form>
-            <a href="/campgrounds/<%= campground._id%>"> Back to Campground</a>
+            <a href="/campgrounds/<%= campground._id%>"> Back to Sightseeing</a>
         </div>
     </div>
