--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
 <div id='cluster-map'></div>
 <div class="container mt-3">
-    <h1>All Campgrounds</h1>
+    <h1>All Sightseeings</h1>
     
     <ul>
         <% for (let campground of campgrounds) {%>
