--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate')%>
     <div class='row'>
-        <h1 class='text-center'>New Campground</h1>
+        <h1 class='text-center'>New Sightseeing</h1>
         <div class='col-md-6 offset-md-3'>
                     <form action="/campgrounds" method='POST' novalidate class='validated-form form' enctype="multipart/form-data">
                         <div class='mb-3'>
@@ -23,7 +23,7 @@
                         -->
                         
                         <div class="mb-3">
-                            <label class='form-label' for="price">Campground Price</label>
+                            <label class='form-label' for="price">Sightseeing Price</label>
                             <div class="input-group">
                                 <span class="input-group-text" id="price-label">$</span>
                                 <input type="text" id='price' class="form-control" placeholder="0.00" aria-label="price"
@@ -43,11 +43,11 @@
                             <input class="form-control custom-file" type="file" id="image" name="image" multiple>
                           </div>
                         <div class="mb-3">
-                            <button class='btn btn-success'>Add Campground</button>
+                            <button class='btn btn-success'>Add Sightseeing</button>
                         </div>
         
                     </form>
-                    <a href="/campgrounds/">All Campground</a>
+                    <a href="/campgrounds/">All Sightseeing</a>
             </div>
             
     </div>
